# BitFun

./: Cargo.toml  pnpm-lock.yaml
.codex/skills/bitfun-webdriver-repro/: SKILL.md
BitFun-Installer/: index.html
BitFun-Installer/scripts/: sync-model-i18n.cjs  sync-theme-i18n.cjs
BitFun-Installer/src/: App.tsx
BitFun-Installer/src-tauri/: Cargo.toml
BitFun-Installer/src-tauri/src/: lib.rs
BitFun-Installer/src-tauri/src/installer/: commands.rs  mod.rs  model_list.rs  types.rs
BitFun-Installer/src/components/: InstallErrorPanel.tsx
BitFun-Installer/src/data/: modelProviders.ts  modelRequestFormats.ts
BitFun-Installer/src/hooks/: useInstaller.ts
BitFun-Installer/src/i18n/locales/: en.json  zh.json
BitFun-Installer/src/pages/: ModelSetup.tsx  Options.tsx  Progress.tsx  ThemeSetup.tsx
BitFun-Installer/src/styles/: global.css
BitFun-Installer/src/theme/: installerThemeRuntime.ts  installerThemesData.ts
BitFun-Installer/src/types/: installer.ts
BitFun-Installer/src/utils/: installPathErrors.ts  modelRequestUrl.ts
MiniApp/Demo/git-graph/: README.md  meta.json  package.json
MiniApp/Demo/git-graph/source/: build.js  index.html  style.css  ui.js  worker.js
MiniApp/Skills/miniapp-dev/: SKILL.md  api-reference.md  architecture.md
src/apps/desktop/: Cargo.toml
src/apps/desktop/resources/: worker_host.js
src/apps/desktop/src/: lib.rs  theme.rs
src/apps/desktop/src/api/: agentic_api.rs  app_state.rs  browser_api.rs  commands.rs  config_api.rs  conversation_api.rs  image_analysis_api.rs  mcp_api.rs  miniapp_api.rs  mod.rs  remote_connect_api.rs  snapshot_service.rs  ssh_api.rs
src/apps/desktop/src/computer_use/: ui_locate_common.rs
src/apps/relay-server/src/: main.rs
src/apps/relay-server/static/: index.html
src/apps/server/src/: bootstrap.rs  rpc_dispatcher.rs
src/crates/core/: Cargo.toml
src/crates/core/builtin_skills/gstack-autoplan/: SKILL.md
src/crates/core/builtin_skills/gstack-cso/: SKILL.md
src/crates/core/builtin_skills/gstack-design-consultation/: SKILL.md
src/crates/core/builtin_skills/gstack-design-review/: SKILL.md
src/crates/core/builtin_skills/gstack-document-release/: SKILL.md
src/crates/core/builtin_skills/gstack-investigate/: SKILL.md
src/crates/core/builtin_skills/gstack-office-hours/: SKILL.md
src/crates/core/builtin_skills/gstack-plan-ceo-review/: SKILL.md
src/crates/core/builtin_skills/gstack-plan-design-review/: SKILL.md
src/crates/core/builtin_skills/gstack-plan-eng-review/: SKILL.md
src/crates/core/builtin_skills/gstack-qa/: SKILL.md
src/crates/core/builtin_skills/gstack-qa-only/: SKILL.md
src/crates/core/builtin_skills/gstack-retro/: SKILL.md
src/crates/core/builtin_skills/gstack-review/: SKILL.md
src/crates/core/builtin_skills/gstack-ship/: SKILL.md
src/crates/core/builtin_skills/writing-skills/: SKILL.md
src/crates/core/src/: lib.rs
src/crates/core/src/agentic/: mod.rs  round_preempt.rs  side_question.rs
src/crates/core/src/agentic/agents/: agentic_mode.rs  deep_research_agent.rs  init_agent.rs  mod.rs  registry.rs  team_mode.rs
src/crates/core/src/agentic/agents/prompts/: deep_research_agent.md  init_agent.md  team_mode.md
src/crates/core/src/agentic/coordination/: coordinator.rs  scheduler.rs
src/crates/core/src/agentic/core/: mod.rs  session.rs
src/crates/core/src/agentic/execution/: execution_engine.rs  round_executor.rs  stream_processor.rs  types.rs
src/crates/core/src/agentic/persistence/: manager.rs
src/crates/core/src/agentic/session/: session_manager.rs
src/crates/core/src/agentic/tools/: registry.rs
src/crates/core/src/agentic/tools/implementations/: file_edit_tool.rs  grep_tool.rs  mcp_tools.rs  miniapp_init_tool.rs  mod.rs  session_control_tool.rs  session_message_tool.rs
src/crates/core/src/agentic/tools/implementations/skills/: builtin.rs  default_profiles.rs  registry.rs
src/crates/core/src/infrastructure/ai/: client.rs
src/crates/core/src/infrastructure/ai/ai_stream_handlers/: Cargo.toml
src/crates/core/src/infrastructure/ai/ai_stream_handlers/src/stream_handler/: anthropic.rs  gemini.rs  mod.rs  openai.rs  responses.rs  stream_stats.rs
src/crates/core/src/infrastructure/ai/ai_stream_handlers/src/types/: openai.rs
src/crates/core/src/infrastructure/filesystem/: file_watcher.rs  path_manager.rs
src/crates/core/src/miniapp/: bridge_builder.rs  compiler.rs  exporter.rs  js_worker.rs  js_worker_pool.rs  manager.rs  mod.rs  permission_policy.rs  runtime_detect.rs  storage.rs  types.rs
src/crates/core/src/service/bootstrap/: bootstrap.rs  mod.rs
src/crates/core/src/service/config/: types.rs
src/crates/core/src/service/conversation/: types.rs
src/crates/core/src/service/cron/: service.rs
src/crates/core/src/service/mcp/: auth.rs  mod.rs
src/crates/core/src/service/mcp/adapter/: context.rs  tool.rs
src/crates/core/src/service/mcp/config/: cursor_format.rs  json_config.rs  service.rs
src/crates/core/src/service/mcp/protocol/: transport_remote.rs  types.rs
src/crates/core/src/service/mcp/server/: config.rs  connection.rs  mod.rs  process.rs
src/crates/core/src/service/mcp/server/manager/: auth.rs  catalog.rs  interaction.rs  lifecycle.rs  mod.rs  reconnect.rs  tests.rs
src/crates/core/src/service/remote_connect/: mod.rs  relay_client.rs  remote_server.rs
src/crates/core/src/service/remote_connect/bot/: command_router.rs  feishu.rs  telegram.rs  weixin.rs
src/crates/core/src/service/remote_ssh/: manager.rs  mod.rs  password_vault.rs  types.rs
src/crates/core/src/service/workspace/: service.rs
src/crates/core/tests/: remote_mcp_streamable_http.rs
src/crates/events/src/: agentic.rs
src/crates/webdriver/src/: bridge.rs  (+1 more)
src/mobile-web/: package-lock.json  package.json
src/mobile-web/src/: App.tsx
src/web-ui/: package.json
src/web-ui/src/: main.tsx
tests/e2e/config/: wdio.conf.ts  wdio.conf_l0.ts  wdio.conf_l1.ts
tests/e2e/specs/: l0-open-settings.spec.ts  l0-open-workspace.spec.ts  l0-webdriver-protocol.spec.ts  l1-chat-input.spec.ts  l1-editor.spec.ts  l1-file-tree.spec.ts  l1-navigation.spec.ts
(+337 files in other folders)
