[package]
name = "bitfun-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun Desktop Application (Tauri)"

[lib]
name = "bitfun_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bitfun-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }
serde_json = { workspace = true }

[dependencies]
# Internal crates
bitfun-core = { path = "../../crates/core", features = ["ssh-remote"] }
bitfun-transport = { path = "../../crates/transport", features = ["tauri-adapter"] }

# Tauri
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-autostart = { workspace = true }

# Inherited from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
dark-light = { workspace = true }
similar = { workspace = true }
ignore = { workspace = true }
urlencoding = { workspace = true }
reqwest = { workspace = true }
thiserror = "1.0"
futures = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32job = { workspace = true }
